Fixed landscape mode, fixed body background problem when there's an overflow

--- a/static/reset.css
+++ b/static/reset.css
@@ -1,10 +1,3 @@
-/*MY ADDITIONS*/
-html {
-	min-height: 100%; /*the body's gradient repeats without this*/
-	font-family: "Barlow Semi Condensed", sans-serif;
-}
-/*END OF MY ADDITIONS*/
-
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
